--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="css/reset.css">
         <link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister|Nunito:400,400i,700" rel="stylesheet">
-        <link rel="stylesheet" href="css/index.css"> <!--font-family: 'Love Ya Like A Sister', cursive;
-                                                         font-family: 'Nunito', sans-serif;-->
+        <link rel="stylesheet" href="css/index.css"> 
     </head>
     <body>
         <div class="superinfo-bg">
-            <div class="superinfo-bg">
+            <div class="superinfo">
                 <span>Seg / Sex - 08:00 às 18:00</span>
                 <a href="tel:+5511 99999-9999">+55 11 99999-99999</a>
                 <span>Av. Ali Perto, 330, São Paulo - SP</span>
@@ -22,7 +21,7 @@
                 <div class="menu-logo">
                     <a href="#">FlexBlog</a>
                 </div>
-                <nav>
+                <nav class="menu-nav">
                     <ul>
                         <li><a href="#Sobre">Sobre</a></li>
                         <li><a href="#Produtos">Produtos</a></li>
